# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
